# fileSys-rs

./: Cargo.toml  README.md  index.html  tailwind.config.js
src/: app.rs  main.rs  router.rs
src/api/: api.rs
src/components/: mod.rs
src/components/breadcrumb/: breadcrumb.css  breadcrumb.rs  mod.rs
src/components/button/: mod.rs
src/components/config_provider/: config-provider.css  config_provider.rs  mod.rs
src/components/list/: list.css  list.rs  mod.rs
src/components/loading/: loading.rs  mod.rs
src/components/pagination/: mod.rs
src/container/: file_list.rs  header.rs  mod.rs
src/context/: app_context.rs  mod.rs
src/hooks/: mod.rs  use_file_list.rs  use_merged_signal.rs
src/page/: mod.rs
src/page/main/: mod.rs
src/page/reader/: mod.rs
src/utils/: callback.rs  classnames.rs  global.rs  mod.rs  request.rs  url.rs
src/utils/dom/: mod.rs  mount_style.rs
