[package]
name = "file-sys"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
console_error_panic_hook = "0.1.7"
leptos = { version = "0.7.2", features = ["csr"] }
serde = { version = "1.0.217", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"

[dependencies.web-sys]
version = "0.3.76"
features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Window"]
